base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-example
  namespace: quarkus-app
  labels:
    app: quarkus-example
    app.kubernetes.io/component: quarkus-example
    app.kubernetes.io/instance: quarkus-example
    app.kubernetes.io/name: quarkus-example
    app.kubernetes.io/part-of: quarkus-app-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/TiagoAvelino/Quarkus-Example'
    openshift.io/generated-by: OpenShiftWebConsole
    argocd.argoproj.io/sync-wave: "30"

spec:
  type: ClusterIP
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
  selector:
    app: quarkus-example
    deployment: quarkus-example
