base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-example
  namespace: quarkus-app
  labels:
    app: quarkus-example
    app.kubernetes.io/component: quarkus-example
    app.kubernetes.io/instance: quarkus-example
    app.kubernetes.io/name: quarkus-example
    app.kubernetes.io/part-of: quarkus-app-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/TiagoAvelino/Quarkus-Example'
    openshift.io/generated-by: OpenShiftWebConsole
    openshift.io/host.generated: 'true'
spec:
  host: quarkus-example-quarkus-app.apps.cluster-qj7w2.qj7w2.sandbox429.opentlc.com
  to:
    kind: Service
    name: quarkus-example
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
